fix back-button ios

--- a/src/Premium.css
+++ b/src/Premium.css
@@ -48,10 +48,34 @@
 }
 
 .premium-header .premium-top-right {
-  top: var(--premium-corner-offset);
+top: var(--premium-corner-offset);
   right: var(--premium-corner-offset);
   border-top: var(--premium-corner-border) solid var(--premium-corner-color);
   border-right: var(--premium-corner-border) solid var(--premium-corner-color);
+}
+
+.pm_back-button-alignment {
+  width: 32px;
+  height: 32px;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 10px;
+  left: 20px;
+}
+
+.pm_back-button-alignment img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.pm_back-button {
+  background: none;
+  border: none;
+  padding: 0px;
+  cursor: pointer;
 }
 
 .premium-header .premium-bottom-left {
